# domain-name-finder

./: pyproject.toml
src/: domain_checker.py
tests/: test_domain_checker.py
