[tool.poetry]
name = "domains"
version = "0.1.0"
description = ""
authors = ["Adam Leigh <adam@fluently.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
domainr = "^1.0.0"
whois = "^1.20240129.2"
python-whois = "^0.9.4"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
